--- a/autobahn/autobahn_app/autobahn_frontend/package.json
+++ b/autobahn/autobahn_app/autobahn_frontend/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^5.15.15",
     "material-icons": "^1.13.12",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
